--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "reapop": "^2.1.0",
-    "reapop-theme-wybo": "^1.0.2",
+    "react-toastify": "^5.5.0",
+    "reconnecting-websocket": "^4.4.0",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
